Feat: Add build-binary.yaml CI/CD. Also build binary TUI and Engine combined.